--- a/WorldBank_Project.ipynb
+++ b/WorldBank_Project.ipynb
@@ -648,9 +648,7 @@
     "### Author\n",
     "\n",
     "\n",
-    "|  Date (YYYY-MM-DD) | By |\n",
-    "|---|---|---|---|\n",
-    "| 2024-07-29  | Shreya Upadhyay |"
+    "#Shreya Upadhyay"
    ]
   }
  ],
